# ig-trading

./: .env.example  .gitignore  IMPROVEMENTS_SUMMARY.md  README.md  app_config.py  client.py  config.py  main.py  pyproject.toml  pytest.ini  run_tests.py  settings.py  test_all_routes.py  test_dry_error_handling.py  test_error_handling.py  test_live_api.py  test_path_validation.py  test_quick_validation.py  trading.toml.example
api/: auth.py  error_handling.py  ig_client.py  rest.py
api/clients/: accounts.py  dealing.py  markets.py  watchlists.py
api_gateway/ig_client/: auth.py  error_handling.py  main.py  master_client.py  rest.py
api_gateway/massive_client/: __init__.py  master_client.py  rest.py
api_gateway/tests/: README.md  TEMPLATE_FOR_NEW_SUBMODULES.md  conftest.py
api_gateway/yfinance_client/: __init__.py  master_client.py  rest.py
backtesting/: __init__.py  engine.py
common/: __init__.py  logging.py
common/alerting/: __init__.py  alerting_service.py
common/resilience/: __init__.py  circuit_breaker.py  rate_limiter.py  retry.py
core/: exceptions.py  logging_config.py  models.py  validators.py
data/: prorealtime_extracted_data.csv
data_collection/: README.md  __init__.py  alerting.py  config.py  config_validation.py  data_collector.py  data_storage.py  examples.py  health.py  main.py  main_unified.py  market_data_collector.py  resilience.py  unified_data_collector.py  validation.py
data_collection/factory/: __init__.py  data_source_factory.py
data_collection/interfaces/: __init__.py  data_source.py  market_data.py  storage.py
data_collection/sources/: __init__.py  ig_data_source.py  massive_data_source.py  yfinance_data_source.py
data_collection/storage/: __init__.py  csv_storage.py  data_storage.py  storage_factory.py  unified_data_storage.py
notebooks/: README.md  basic_visualization.ipynb
orchestrator/: README.md  run.py  trading_orchestrator.py
scripts/: backtest_golden_death_cross_ndx.py  test_telegram_transport.py
signal_dispatch/: __init__.py  router.py  transports.py
strategies/: __init__.py
strategies/base/: __init__.py  signal.py  strategy.py
strategies/config/: __init__.py  strategy_config.py
visualization/: __init__.py  chart.py  interactive_chart.py  utils.py
(+53 files in other folders)
