[project]
name = "ig-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "isort==6.0.1",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.0",
    "sniffio==1.3.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
]
