[project]
name = "ig-trading"
version = "0.1.0"
description = "IG interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.0",
    "sniffio==1.3.1",
    "tenacity>=9.1.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.3.0",
    "ruff>=0.11.13",
]
