[project]
name = "ig-trading"
version = "0.1.0"
description = "IG interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "polygon-api-client>=1.14.0",
    "yfinance>=0.2.0",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.0",
    "sniffio==1.3.1",
    "tenacity>=9.1.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.3.0",
    "jupyter>=1.0.0",
    "mplfinance>=0.12.10b0",
    "matplotlib>=3.8.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.11.13",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.3.0",
    "pytest-httpx>=0.35.0",
]
